# physSimApplied

./: CMakeLists.txt  Circle.h  Demo10.3.2022.cpp  Demo10.3.2022.vcxproj  Demo10.3.2022.vcxproj.filters  Dragging.cpp  Dragging.h  Kinematics.cpp  Kinematics.h  README.md  SFMLSetup.sln  Scene.cpp  Scene.h  Vector2d.cpp  Vector2d.h  Vector3d.cpp  Vector3d.h  skeleton.cpp  test.cpp
